tests/toylang/neg/001407_mutation.toylang
program a = { var a : bool while a do sleep; } .
